--- a/SampleAppWithDapper/Views/Web.config
+++ b/SampleAppWithDapper/Views/Web.config
@@ -17,7 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="SampleAppWithDapper" />   
+        <add namespace="SampleAppWithDapper" />
+        <add namespace="Resource" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
